--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemailer": "^7.0.6"
   },
-  "devDependencies": {},
   "description": ""
 }
